@@ -1,0 +1,33 @@
+/**********************************************************************
+op.cpp -
+ 
+Copyright (C) 2009 Tim Vandermeersch
+ 
+This file is part of the Open Babel project.
+For more information, see <http://openbabel.sourceforge.net/>
+ 
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation version 2 of the License.
+ 
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+***********************************************************************/
+
+#include <openbabel/babelconfig.h>
+#include <openbabel/op.h>
+
+using namespace std;
+namespace OpenBabel
+{
+#ifdef __CYGWIN__
+  // macro to implement static OBPlugin::PluginMapType& Map()
+  PLUGIN_CPP_FILE(OBOp)
+#endif
+}
+
+
+//! \file descriptor.cpp
+//! \brief Base class for molecular descriptors
